# masm-lean

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COMPARISON.md  MidenLean.lean  README.md  claude-notes.md  lake-manifest.json  lakefile.lean
.galvanize/: goal.md  iteration-13.md  iterations.md  spec.md
.github/workflows/: lean.yml
.vivisect/: .full-run-marker  .last-run-commit  analysis-archive.md  analysis-output.md  analysis.md  findings-1.md  findings-11.md  findings-12.md  findings-13.md  findings-2.md  findings.md  guidelines.md  manual-analysis.md  patches-13.md  patches-2.md  patches.md  setup-output.md  targets.md
MidenLean/: Felt.lean  Instruction.lean  Op.lean  Semantics.lean  State.lean
MidenLean/Proofs/: EquationLemmas.lean  Helpers.lean  Interp.lean  SimpAttrs.lean  StepLemmas.lean  Tactics.lean  U64.lean  U64And.lean  U64Clo.lean  U64Clz.lean  U64Cto.lean  U64Ctz.lean  U64Eq.lean  U64Gt.lean  U64Gte.lean  U64Lt.lean  U64Lte.lean  U64MinMax.lean  U64Neq.lean  U64Or.lean  U64OverflowingSub.lean  U64Sub.lean  U64U32Assert4.lean  U64WideningAdd.lean  U64WideningMul.lean  U64WrappingMul.lean  U64Xor.lean  Word.lean  WordArrange.lean  WordEq.lean  WordGt.lean  WordGte.lean  WordLt.lean  WordLte.lean  WordReverse.lean  WordTestEq.lean  WordTestz.lean
MidenLean/Tests/: CrossValidation.lean  Procedures.lean  Semantics.lean
masm-to-lean/: Cargo.toml
masm-to-lean/src/: classifier.rs  hypothesis.rs  instruction.rs  instruction_info.rs  main.rs  module.rs  skeleton.rs  stack_effect.rs  translate.rs
scripts/: generate_verified_tables.py
(+90 files in other folders)
